--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -26,3 +26,24 @@
   width: 70%;
   left: 50%;
 }
+
+.inline{
+  > * {
+    display: inline-block !important;
+    position: absolute;
+    transform: translateY(-50%);
+    margin-top: 90px !important;
+    margin-left: 50px;
+  }
+}
+
+.grey{
+  background-color: rgb(226, 226, 226);
+}
+
+.profileTile{
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+  width: 1330px;
+}
